2006-07-04  Lillian Angel  <langel@redhat.com>

	* java/awt/dnd/DragSourceContext.java
	(DragSourceContext): Implemented fully. Fixed API docs.
	(transferablesFlavorsChanged): Implemented.
	(dragEnter): Implemented.
	(dragOver): Implemented.
	(dragExit): Implemented.
	(dropActionChanged): Implemented.
	(dragDropEnd): Implemented.

2006-07-04  Lillian Angel  <langel@redhat.com>

	* javax/swing/plaf/basic/BasicOptionPaneUI.java:
	Fixed name of constant.
	(getIconWidth): Changed name of constant returned.
	(getIconHeight): Likewise.
	(paint): Likewise.
	(createSeparator): Marked as unimplemented.
	* javax/swing/plaf/basic/BasicTableUI.java
	(focusGained): Marked as unimplemented.
	(focusLost): Marked as unimplemented.
	(mouseEntered): Likewise.
	(mouseMoved): Likewise.
	(uninstallDefaults): Likewise.
	* javax/swing/plaf/basic/BasicToolBarUI.java
	(mouseClicked): Changed comment.
	(mouseEntered): Likewise.
	(mouseExited): Likewise.
	(mouseMoved): Likewise.
	(setOrientation): Implemented.
	(ToolBarFocusListener): Marked as unimplemented.
	(focusGained): Marked as unimplemented.
	(focusLost): Marked as unimplemented.

2006-07-04  Audrius Meskauskas  <AudriusA@Bioinformatics.org>

	PR 28061
	* javax/swing/plaf/basic/BasicTreeUI.java (isLocationInExpandControl):
	Mind the effect of the root visibility on the position of the control.
	Quess icon width 18. (paintVerticalPartOfLeg): Do no paint the 
	vertical line over first level nodes.

2006-07-04  Lillian Angel  <langel@redhat.com>

	* javax/swing/plaf/basic/BasicMenuUI.java
	(installKeyboardActions): Implemented to call super. Nothing else
	needs to be done here.
	(setupPostTimer): Marked as unimplemented.
	(uninstallKeyboardActions): Implemented to call super. Nothing else
	needs to be done here.
	(mouseMoved): Removed TODO. Nothing to be done here.
	(ChangeHandler): Implemented.
	(menuDragMouseExited): Removed TODO. Nothing to be done here.
	(menuDragMouseReleased): Removed TODO. Nothing to be done here.